Trying to allow optional makefile command line args
The kernel has a couple of optional debug/test flags that can be defined
while compiling, before they would override the required flags. Now they
are appended after the required flags. This may not be the proper way to
do it, but it works for now and will be investigated further later.

--- a/boot/x86_all/makefile
+++ b/boot/x86_all/makefile
@@ -1,5 +1,5 @@
 CC=gcc
-C_FLAGS=-Wall -Werror -Wextra -pedantic -std=gnu99
+CFLAGS=-Wall -Werror -Wextra -pedantic -std=gnu99
 
 AS=as
 AS_FLAGS=--32 -n32
@@ -30,4 +30,4 @@ bootloader:
 
 ./bin/FancyCat:
 	@echo Creating FancyCat
-	@$(CC) $(C_FLAGS) FancyCat.c -o ./bin/FancyCat
+	@$(CC) $(CFLAGS) FancyCat.c -o ./bin/FancyCat
